--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     nomodule
     src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-  <script src="script.js"></script>
+  <script src="src/script.js"></script>
 
 
   </body>
